--- a/Readme.org
+++ b/Readme.org
@@ -2,6 +2,31 @@
 
 #+STARTUP: overview
 
+* Initial configuration (must be at the beginning)
+
+#+begin_src emacs-lisp
+  (require 'server)
+  (unless (server-running-p)
+    (server-start))
+
+  (require 'package)
+  (setq package-user-dir (expand-file-name "elpa/" user-emacs-directory))
+
+  (setq package-archives '(("gnu"       . "http://elpa.gnu.org/packages/")
+                           ("melpa"     . "https://melpa.org/packages/")
+                           ))
+
+  (setq package-enable-at-startup nil)
+  (package-initialize)
+
+  (unless (package-installed-p 'use-package)
+    (package-refresh-contents)
+    (package-install 'use-package))
+
+  (require 'use-package)
+  (setq use-package-always-ensure t)
+#+end_src
+
 * Interface tweaks
 
 #+begin_src emacs-lisp
