--- a/Readme.org
+++ b/Readme.org
@@ -220,3 +220,12 @@ Consult provides a set of powerful search and navigation commands, enhancing the
    ("C-c m" . consult-imenu)))             ;; jump to symbol in buffer
 #+end_src
 
+** Marginalia
+
+Marginalia adds annotations to minibuffer completion candidates, making them easier to understand and choose.
+
+#+begin_src emacs-lisp
+(use-package marginalia
+  :init
+  (marginalia-mode))
+#+end_src
