--- a/Readme.org
+++ b/Readme.org
@@ -371,6 +371,58 @@ Marginalia adds annotations to minibuffer completion candidates, making them eas
     (marginalia-mode))
 #+end_src
 
+* Magit
+
+Use magit for git integration
+
+#+begin_src emacs-lisp
+  (use-package magit :ensure t)
+#+end_src
+
+** Keybindings
+
+These are the keybindings I like to use to see my git status
+
+#+begin_src emacs-lisp
+  (global-set-key (kbd "C-c g") 'magit-status)
+  (global-set-key (kbd "C-c C-g") 'magit-status)
+#+end_src
+
+** Full screen magit-status and unfold all sections
+
+Whenever I enter the magit status, it goes full-screen, hiding the rest of the windows
+
+#+begin_src emacs-lisp
+  (defadvice magit-status (around magit-fullscreen activate)
+    (window-configuration-to-register :magit-fullscreen)
+    ad-do-it
+    (delete-other-windows)
+    (magit-section-show-level-2-all))
+#+end_src
+
+** Restore windows after quitting magit
+
+And it restores the previous window layout once I quit
+
+#+begin_src emacs-lisp
+  (defun magit-quit-session ()
+    "Restores the previous window configuration and kills the magit buffer"
+    (interactive)
+    (kill-buffer)
+    (jump-to-register :magit-fullscreen))
+  (define-key magit-status-mode-map (kbd "q") 'magit-quit-session)
+#+end_src
+
+** Some custom variables
+
+Some extra variables I like
+
+#+begin_src emacs-lisp
+  (custom-set-variables
+   '(git-commit-fill-column 1000)
+   '(git-commit-finish-query-functions nil)
+   '(git-commit-summary-max-length 1000))
+#+end_src
 
 * Tree-sitter support
 
