--- a/Readme.org
+++ b/Readme.org
@@ -66,13 +66,19 @@ Small interface tweaks to simplify the look and feel
 
 ** Font
 
-Set default font
+*** Set default font
 
-*** Jetbrains Mono
+**** Jetbrains Mono
 
 #+begin_src emacs-lisp
   (set-face-attribute 'default nil :family "JetBrains Mono" :height 150)
   (add-to-list 'default-frame-alist '(font . "JetBrains Mono 15"))
+#+end_src
+
+*** Nerd icons
+
+#+begin_src emacs-lisp
+  (setq nerd-icons-font-family "FiraCode Nerd Font Mono")
 #+end_src
 
 ** Theme
@@ -378,9 +384,11 @@ Use =H-D m= keybinding
   (global-set-key (kbd "H-D m") #'fiachetti/change-file-mode)
 #+end_src
 
-* Window movement
+* Windows
 
-** Winner mode
+** Movement
+
+*** Winner mode
 
 Navigate window configuration history
 
@@ -388,7 +396,7 @@ Navigate window configuration history
   (winner-mode 1)
 #+end_src
 
-** Global keybindings
+**** Global keybindings
 
 #+begin_src emacs-lisp
   (global-set-key (kbd "H-<left>")  'windmove-left)
@@ -397,6 +405,42 @@ Navigate window configuration history
   (global-set-key (kbd "H-<down>")  'windmove-down)
 
   (global-set-key (kbd "H-w") 'balance-windows)
+#+end_src
+
+*** Split vertically by default
+
+#+begin_src emacs-lisp
+  (setq split-height-threshold nil)
+  (setq split-width-threshold 0)
+#+end_src
+
+* Font size customizations
+
+** Increase and decrease font size
+
+#+begin_src emacs-lisp
+  (setq fiachetti/font-size-increment 5)
+
+  ;;;###autoload
+  (defun fiachetti/decrease-font ()
+    "Decrease the font for all buffers"
+    (interactive)
+    (let ((old-face-attribute (face-attribute 'default :height)))
+      (set-face-attribute 'default nil :height (+ old-face-attribute fiachetti/font-size-increment))))
+
+  ;;;###autoload
+  (defun fiachetti/increase-font ()
+    "Increase the font for all buffers"
+    (interactive)
+    (let ((old-face-attribute (face-attribute 'default :height)))
+      (set-face-attribute 'default nil :height (- old-face-attribute fiachetti/font-size-increment))))
+#+end_src
+
+** Key Bindings
+
+#+begin_src emacs-lisp
+  (global-set-key (kbd "H-]") 'fiachetti/increase-font)
+  (global-set-key (kbd "H-[") 'fiachetti/decrease-font)
 #+end_src
 
 * Bookmarks
@@ -408,10 +452,99 @@ Navigate window configuration history
 
 * Dired
 
+** Open with "a"
+
 This line enables =dired-find-alternate-file=, which allows you to open a file from dired using the =a= keybinding without being promped.
 
 #+begin_src emacs-lisp
   (put 'dired-find-alternate-file 'disabled nil)
+#+end_src
+
+** Auto refresh dired, but be quiet about it
+
+#+begin_src emacs-lisp
+  (setq global-auto-revert-non-file-buffers t)
+  (setq auto-revert-verbose nil)
+  (add-hook 'dired-mode-hook #'auto-revert-mode)
+#+end_src
+
+** Jump to top and bottom
+
+#+begin_src emacs-lisp
+  (defun fiachetti/dired-top ()
+    "Jump to first real file in Dired."
+    (interactive)
+    (goto-char (point-min))
+    (dired-next-line 2))
+
+  (defun fiachetti/dired-bottom ()
+    "Jump to last file in Dired."
+    (interactive)
+    (goto-char (point-max))
+    (dired-next-line -1))
+
+  (with-eval-after-load 'dired
+    (define-key dired-mode-map [remap beginning-of-buffer] #'fiachetti/dired-top)
+    (define-key dired-mode-map [remap end-of-buffer] #'fiachetti/dired-bottom))
+#+end_src
+
+** File ordering
+
+#+begin_src emacs-lisp
+  (when (executable-find "ls")
+    (setq dired-listing-switches "-aBhl --group-directories-first"))
+#+end_src
+
+** Dired omit
+
+#+begin_src emacs-lisp
+  (setq-default dired-omit-files-p nil) ; Buffer-local variable
+
+  (setq dired-omit-files "^\\.?#\\|^\\.$\\|^\\.[^\\.]")
+  ;; (setq dired-omit-mode t) ; Turn on Omit mode.
+  (setq dired-omit-verbose nil) ; Turn off Omit mode messages.
+#+end_src
+
+** dired-x
+
+#+begin_src emacs-lisp
+  (require 'dired-x)
+#+end_src
+
+** Hide details
+
+#+begin_src emacs-lisp
+  (add-hook 'dired-mode-hook #'dired-hide-details-mode)
+#+end_src
+
+** diredfl
+
+#+begin_src emacs-lisp
+  (use-package diredfl
+    :hook (dired-mode . diredfl-mode)
+    :config
+    ;; Override default colors to match dark themes like ir-black
+    (set-face-attribute 'diredfl-dir-name nil :foreground "#66d9ef" :weight 'normal)
+    (set-face-attribute 'diredfl-file-name nil :foreground "#f8f8f2")
+    (set-face-attribute 'diredfl-symlink nil :foreground "#fd971f" :slant 'italic)
+    (set-face-attribute 'diredfl-exec-priv nil :foreground "#a6e22e")
+    (set-face-attribute 'diredfl-read-priv nil :foreground "#f92672")
+    (set-face-attribute 'diredfl-write-priv nil :foreground "#fd971f"))
+#+end_src
+
+** Fuzzy filtering
+
+#+begin_src emacs-lisp
+  (use-package dired-narrow
+    :bind (:map dired-mode-map
+                ("/" . dired-narrow)))
+#+end_src
+
+** Some eye candy
+
+#+begin_src emacs-lisp
+  (use-package nerd-icons-dired
+    :hook (dired-mode . nerd-icons-dired-mode))
 #+end_src
 
 * Try
@@ -681,13 +814,13 @@ Select the best way to format the current buffer
 Use =H-== to format the entire buffer
 
 #+begin_src emacs-lisp
- (global-set-key (kbd "H-=") #'fiachetti/format-buffer)
+  (global-set-key (kbd "H-=") #'fiachetti/format-buffer)
 #+end_src
 
 Use =H-+= to reindent buffers
 
 #+begin_src emacs-lisp
- (global-set-key (kbd "H-=") #'fiachetti/reindent-buffer)
+  (global-set-key (kbd "H-=") #'fiachetti/reindent-buffer)
 #+end_src
 
 ** Reindent buffer
@@ -717,4 +850,3 @@ Use =H-+= to reindent buffers
   (use-package dockerfile-ts-mode
     :mode ("Dockerfile\\'" . dockerfile-ts-mode))
 #+end_src
-
